# maj3

./: CMakeLists.txt  README.md
maj3/: CMakeLists.txt  adder.h  dff.h  maj3gate.h  module.cpp  module.h
test/: CMakeLists.txt  test_adder.cpp  test_compilation.cpp  test_dff.cpp
test/mig/: CMakeLists.txt  execute.cpp  fetch.cpp  mig.cpp  mig.h  mig_test_1.cpp
